@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 55;
-# define VERSION_BUILD_NO 55
-char	version_build_date[] = "Tue Jul 10 20:20:31 2012";
+int	version_build_no = 56;
+# define VERSION_BUILD_NO 56
+char	version_build_date[] = "Thu Oct 11 21:58:46 2012";
 
